$Id$

2013-12-19  Christian Franke  <franke@computer.org>

	autogen.sh: automake 1.13.3 works.

2013-12-14  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Toshiba 2.5" HDD MK..65GSX: "... H" (USB?) variant
	- Toshiba 2.5" HDD MQ01UBD... (USB 3.0)
	- USB: Toshiba Stor.E Slim USB 3.0 (0x0480:0x0100)
	- USB: Toshiba Stor.E Basics (0x0480:0xa009)
	- USB: Toshiba Stor.E (0x0939:0x0b15)
	- USB: Seagate FreeAgent GoFlex (0x0bc2:0x5020)
	- USB: WD My Passport Ultra (0x1058:0x0741)
	- USB: WD Elements (0x1058:0x1048)
	- USB: Initio (0x13fd:0x1640) (ticket #295)
	- USB: LucidPORT (0x1759:0x5100)

2013-12-08  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Apacer SDM4: SFDDA01C firmware (ticket #304).
	- Crucial/Micron RealSSD m4/C400/P400: M4 SSD1 (ticket #306).
	- Seagate Barracuda 7200.14: Check part number to avoid bogus
	firmware bug warning (ticket #298).

2013-11-23  Christian Franke  <franke@computer.org>

	configure.ac, utility.cpp: Remove __DATE__, __TIME__
	and SMARTMONTOOLS_CONFIGURE_DATE.
	This obsoletes OpenSUSE nobuild-date.patch.
	Reproducible builds are now supported.

2013-11-15  Alex Samorukov <samm@os2.kiev.ua>

       os_freebsd.cpp: Fix crash on FreeBSD 9.2 caused by wrong
       SCSI status check condition.
       os_freebsd.cpp: Print debug info on errors only if requested.

2013-11-07  Matt Kraai  <...>

	smartctl.cpp: Add missing stdlib.h.
	This fixes build on QNX 6.3.2 (ticket #300).

2013-11-07  Roger Röhrig  <...>

	drivedb.h: Intel DC S3500 Series SSDs: Add -F xerrorlba.

2013-11-07  Roger Röhrig  <...>

	atacmds.cpp: Fix Extended Comprehensive Error Log timestamp
	byte order on big endian machines.

2013-09-12  Christoph Egger  <christoph@debian.org>

	dev_areca.h: Fix build on kFreeBSD (Debian bug 717567).
	This obsoletes Debian kfreebsd.patch.

2013-08-17  Christian Franke  <franke@computer.org>

	examplescripts: Add scripts from Debian and Fedora packages.

2013-08-17  Christian Franke  <franke@computer.org>
